--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tauri-apps/plugin-updater": "2.0.0-alpha.5",
     "@tiptap/core": "^2.1.12",
     "@tiptap/extension-image": "^2.1.12",
+    "@tiptap/extension-placeholder": "^2.1.16",
     "@tiptap/pm": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
     "@tiptap/vue-3": "^2.1.12",
