--- a/package.json
+++ b/package.json
@@ -37,8 +37,13 @@
     "@tauri-apps/plugin-store": "2.0.0-alpha.5",
     "@tauri-apps/plugin-updater": "2.0.0-alpha.5",
     "@tiptap/core": "^2.1.12",
+    "@tiptap/extension-code-block-lowlight": "^2.1.16",
     "@tiptap/extension-image": "^2.1.12",
+    "@tiptap/extension-link": "^2.1.16",
     "@tiptap/extension-placeholder": "^2.1.16",
+    "@tiptap/extension-task-item": "^2.1.16",
+    "@tiptap/extension-task-list": "^2.1.16",
+    "@tiptap/extension-underline": "^2.1.16",
     "@tiptap/pm": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
     "@tiptap/vue-3": "^2.1.12",
@@ -56,6 +61,7 @@
     "gridstack": "^10.0.1",
     "i18next": "^23.6.0",
     "kysely": "^0.27.2",
+    "lowlight": "^2.9.0",
     "merge-options": "^3.0.4",
     "mitt": "^3.0.1",
     "nanoid": "^5.0.1",
