--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tauri-apps/api": "2.0.0-alpha.13",
     "@tauri-apps/plugin-app": "2.0.0-alpha.1",
     "@tauri-apps/plugin-autostart": "2.0.0-alpha.5",
+    "@tauri-apps/plugin-clipboard-manager": "2.0.0-alpha.5",
     "@tauri-apps/plugin-dialog": "2.0.0-alpha.5",
     "@tauri-apps/plugin-fs": "2.0.0-alpha.5",
     "@tauri-apps/plugin-log": "2.0.0-alpha.5",
