--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,7 @@ tauri-plugin-sql = { version = "2.0.0-alpha.6", features = ["sqlite"] }
 tauri-plugin-store = "2.0.0-alpha.6"
 tauri-plugin-log = "2.0.0-alpha.6"
 tauri-plugin-dialog = "2.0.0-alpha"
+tauri-plugin-clipboard-manager = "2.0.0-alpha"
 tauri-plugin-shion-synchronizer = { git = "https://github.com/hanaTsuk1/shion-synchronizer" }
 tauri-plugin-shion-watcher = { git = "https://github.com/hanaTsuk1/shion-watcher" }
 
