--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,7 +2,4 @@ blank_issues_enabled: false
 contact_links:
   - name: Questions & Discussions
     url: https://github.com/shion-app/shion/discussions
-    about: Use GitHub discussions for message-board style questions and discussions.
-  - name: 问题与讨论
-    url: https://github.com/shion-app/shion/discussions
-    about: 使用 GitHub 讨论进行留言板式问题和讨论
+    about: Use GitHub discussions for message-board style questions and discussions
