--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "camelcase-keys": "^9.0.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "driver.js": "^1.3.1",
     "echarts": "^5.4.2",
     "fast-deep-equal": "^3.1.3",
     "gridstack": "^10.0.1",
