--- a/package.json
+++ b/package.json
@@ -25,18 +25,17 @@
   "dependencies": {
     "@date-io/date-fns": "^2.17.0",
     "@mdi/font": "^7.3.67",
-    "@tauri-apps/api": "2.0.0-alpha.13",
-    "@tauri-apps/plugin-app": "2.0.0-alpha.1",
-    "@tauri-apps/plugin-autostart": "2.0.0-alpha.5",
-    "@tauri-apps/plugin-clipboard-manager": "2.0.0-alpha.5",
-    "@tauri-apps/plugin-dialog": "2.0.0-alpha.5",
-    "@tauri-apps/plugin-fs": "2.0.0-alpha.5",
-    "@tauri-apps/plugin-log": "2.0.0-alpha.5",
-    "@tauri-apps/plugin-process": "2.0.0-alpha.5",
-    "@tauri-apps/plugin-shell": "2.0.0-alpha.5",
-    "@tauri-apps/plugin-sql": "2.0.0-alpha.5",
-    "@tauri-apps/plugin-store": "2.0.0-alpha.5",
-    "@tauri-apps/plugin-updater": "2.0.0-alpha.5",
+    "@tauri-apps/api": "^2.0.0-beta.8",
+    "@tauri-apps/plugin-autostart": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-clipboard-manager": "^2.1.0-beta.0",
+    "@tauri-apps/plugin-dialog": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-fs": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-log": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-process": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-shell": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-sql": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-store": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-updater": "^2.0.0-beta.2",
     "@tiptap/core": "^2.2.0",
     "@tiptap/extension-code-block-lowlight": "^2.2.0",
     "@tiptap/extension-image": "^2.2.0",
@@ -70,6 +69,7 @@
     "notiwind": "^2.0.2",
     "pinia": "^2.0.34",
     "svg.js": "^2.7.1",
+    "tauri-plugin-shion-history-api": "github:shion-app/history",
     "tauri-plugin-shion-watcher-api": "github:shion-app/watcher",
     "vee-validate": "^4.11.8",
     "vue": "^3.3.7",
@@ -87,7 +87,7 @@
     "@iconify-json/mdi": "^1.1.50",
     "@intlify/unplugin-vue-i18n": "^1.4.0",
     "@rollup/pluginutils": "^5.0.2",
-    "@tauri-apps/cli": "2.0.0-alpha.21",
+    "@tauri-apps/cli": "^2.0.0-beta.13",
     "@types/better-sqlite3": "^7.6.5",
     "@types/node": "^18.7.10",
     "@types/postcss-pxtorem": "^6.0.3",
