--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "shion"
-version = "0.8.0"
+version = "0.9.0"
 authors = ["hanaTsuk1"]
 license = "GPL-3.0-only"
 repository = "https://github.com/shion-app/shion"
@@ -9,29 +9,29 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-alpha.13", features = [] }
+tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "^0.4"
-tauri = { version = "2.0.0-alpha.21", features = [ "protocol-asset", "tray-icon", "devtools"] }
-tauri-plugin-process = "2.0.0-alpha.6"
-tauri-plugin-fs = "2.0.0-alpha.6"
-tauri-plugin-shell = "2.0.0-alpha.6"
-tauri-plugin-sql = { version = "2.0.0-alpha.6", features = ["sqlite"] }
-tauri-plugin-store = "2.0.0-alpha.6"
-tauri-plugin-log = "2.0.0-alpha.6"
-tauri-plugin-dialog = "2.0.0-alpha"
-tauri-plugin-clipboard-manager = "2.0.0-alpha"
+tauri = { version = "2.0.0-beta", features = [ "protocol-asset", "tray-icon", "devtools"] }
+tauri-plugin-process = "2.0.0-beta"
+tauri-plugin-fs = "2.0.0-beta"
+tauri-plugin-shell = "2.0.0-beta"
+tauri-plugin-sql = { version = "2.0.0-beta", features = ["sqlite"] }
+tauri-plugin-store = "2.0.0-beta"
+tauri-plugin-log = "2.0.0-beta"
+tauri-plugin-dialog = "2.0.0-beta"
+tauri-plugin-clipboard-manager = "2.1.0-beta"
 tauri-plugin-shion-watcher = { git = "https://github.com/shion-app/watcher" }
+tauri-plugin-shion-history = { git = "https://github.com/shion-app/history" }
 sys-locale = "0.3.1"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
-window-shadows = "0.2.2"
-tauri-plugin-autostart = "2.0.0-alpha.6"
-tauri-plugin-single-instance = "2.0.0-alpha.6"
-tauri-plugin-updater = "2.0.0-alpha.6"
+tauri-plugin-autostart = "2.0.0-beta"
+tauri-plugin-single-instance = "2.0.0-beta"
+tauri-plugin-updater = "2.0.0-beta"
 open = "5.0.1"
 
 [features]
