--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "nanoid": "^5.0.1",
     "notiwind": "^2.0.2",
     "pinia": "^2.0.34",
+    "psl": "^1.9.0",
     "svg.js": "^2.7.1",
     "tauri-plugin-shion-history-api": "github:shion-app/history",
     "tauri-plugin-shion-watcher-api": "github:shion-app/watcher",
@@ -91,11 +92,12 @@
     "@types/better-sqlite3": "^7.6.5",
     "@types/node": "^18.7.10",
     "@types/postcss-pxtorem": "^6.0.3",
+    "@types/psl": "^1.1.3",
     "@unocss/preset-icons": "^0.56.5",
     "@unocss/reset": "^0.57.1",
     "@unocss/transformer-directives": "^0.56.5",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/coverage-v8": "^1.5.0",
     "@vue/runtime-core": "^3.3.7",
     "better-sqlite3": "^8.7.0",
     "commander": "^10.0.1",
@@ -124,7 +126,7 @@
     "vite-plugin-vue-devtools": "1.0.0-beta.5",
     "vite-plugin-vuetify": "^1.0.2",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.6",
+    "vitest": "^1.5.0",
     "vue-tsc": "^1.8.24"
   },
   "simple-git-hooks": {
