--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "vue-final-modal": "^4.4.5",
     "vue-i18n": "^9.6.0",
     "vue-router": "^4.1.6",
+    "vue-word-highlighter": "^1.2.4",
     "vuetify": "^3.4.3",
     "zod": "^3.22.4",
     "zod-i18n-map": "^2.21.0"
