--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,12 +27,15 @@ tauri-plugin-clipboard-manager = "2.1.0-beta"
 tauri-plugin-shion-watcher = { git = "https://github.com/shion-app/watcher" }
 tauri-plugin-shion-history = { git = "https://github.com/shion-app/history" }
 sys-locale = "0.3.1"
+thiserror = "1.0"
 
 [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
 tauri-plugin-autostart = "2.0.0-beta"
 tauri-plugin-single-instance = "2.0.0-beta"
 tauri-plugin-updater = "2.0.0-beta"
 open = "5.0.1"
+zip = "0.6"
+zip-extensions = "0.6"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
