--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "camel-case": "^4.1.2",
     "camelcase-keys": "^9.0.0",
     "classnames": "^2.3.2",
+    "compare-versions": "^6.1.0",
     "date-fns": "^2.29.3",
     "driver.js": "^1.3.1",
     "echarts": "^5.4.2",
