--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "echarts": "^5.4.2",
     "fast-deep-equal": "^3.1.3",
     "gridstack": "^10.0.1",
+    "hotkeys-js": "^3.13.7",
     "i18next": "^23.6.0",
     "kysely": "^0.27.2",
     "lowlight": "^2.9.0",
