--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,8 +2,6 @@ name: release
 
 on:
   push:
-    branches:
-      - master
     tags:
       - 'v*'
 
@@ -12,51 +10,53 @@ jobs:
     permissions: write-all
     runs-on: windows-latest
     steps:
-      - uses: de-vri-es/setup-git-credentials@v2
-        with:
-          credentials: ${{secrets.GIT_CREDENTIALS}}
+      # - uses: de-vri-es/setup-git-credentials@v2
+      #   with:
+      #     credentials: ${{secrets.GIT_CREDENTIALS}}
 
-      - uses: actions/checkout@v3
+      # - uses: actions/checkout@v3
 
-      - name: Rust setup
-        uses: dtolnay/rust-toolchain@stable
+      # - name: Rust setup
+      #   uses: dtolnay/rust-toolchain@stable
 
-      - name: Rust cache
-        uses: swatinem/rust-cache@v2
-        with:
-          workspaces: ./src-tauri -> target
+      # - name: Rust cache
+      #   uses: swatinem/rust-cache@v2
+      #   with:
+      #     workspaces: ./src-tauri -> target
 
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 8
+      # - uses: pnpm/action-setup@v2
+      #   with:
+      #     version: 8
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: pnpm
+      # - uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 18
+      #     cache: pnpm
 
-      - run: pnpm install
+      # - run: pnpm install
 
-      - name: Build the app
-        uses: tauri-apps/tauri-action@v0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
-          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
-        with:
-          tagName: ${{ github.ref_name }}
-          releaseName: v__VERSION__
-          prerelease: ${{ contains(github.ref_name, '-') }}
-          args: -c src-tauri/tauri.conf.build.json
+      # - name: Build the app
+      #   uses: tauri-apps/tauri-action@v0
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+      #     TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
+      #   with:
+      #     tagName: ${{ github.ref_name }}
+      #     releaseName: v__VERSION__
+      #     prerelease: ${{ contains(github.ref_name, '-') }}
+      #     args: -c src-tauri/tauri.conf.build.json
 
       - name: Push docs repository config file
-        uses: dmnemec/copy_file_to_another_repo_action@main
+        uses: cpina/github-action-push-to-another-repository@main
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
-          source_file: .vitepress/latest.json
-          destination_repo: shion-app/docs
-          destination_folder: .vitepress
-          user_email: '101488209+hanaTsuk1@users.noreply.github.com'
-          user_name: hanaTsuk1
-          commit_message: update ${{ github.ref_name }}
+          source-directory: .vitepress
+          target-directory: .vitepress
+          destination-github-username: shion-app
+          destination-repository-name: docs
+          target-branch: main
+          user-name: hanaTsuk1
+          user-email: 101488209+hanaTsuk1@users.noreply.github.com
+          commit-message: update ${{ github.ref_name }}
