--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "driver.js": "^1.3.1",
     "echarts": "^5.4.2",
     "fast-deep-equal": "^3.1.3",
-    "gridstack": "^10.0.1",
+    "grid-layout-plus": "^1.0.5",
     "hotkeys-js": "^3.13.7",
     "i18next": "^23.6.0",
     "kysely": "^0.27.2",
