--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shion",
   "type": "module",
-  "version": "0.11.14-beta.0",
+  "version": "0.11.14",
   "private": true,
   "license": "GPL-3.0-only",
   "scripts": {
