--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "tauri-plugin-shion-history-api": "github:shion-app/history",
     "tauri-plugin-shion-watcher-api": "github:shion-app/watcher",
     "vee-validate": "^4.11.8",
-    "vue": "^3.3.7",
+    "vue": "^3.4.33",
     "vue-component-type-helpers": "^1.8.24",
     "vue-echarts": "^6.5.5",
     "vue-final-modal": "^4.4.5",
@@ -98,12 +98,11 @@
     "@types/node": "^18.7.10",
     "@types/postcss-pxtorem": "^6.0.3",
     "@types/psl": "^1.1.3",
-    "@unocss/preset-icons": "^0.56.5",
-    "@unocss/reset": "^0.57.1",
-    "@unocss/transformer-directives": "^0.56.5",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@unocss/preset-icons": "^0.61.5",
+    "@unocss/reset": "^0.61.5",
+    "@unocss/transformer-directives": "^0.61.5",
+    "@vitejs/plugin-vue": "^5.0.0",
     "@vitest/coverage-v8": "^1.5.0",
-    "@vue/runtime-core": "^3.3.7",
     "better-sqlite3": "^8.7.0",
     "commander": "^10.0.1",
     "eslint": "^8.36.0",
@@ -123,16 +122,16 @@
     "semver": "^7.5.0",
     "simple-git-hooks": "^2.8.1",
     "typescript": "^5.2.2",
-    "unocss": "^0.56.5",
+    "unocss": "^0.61.5",
     "unplugin-auto-import": "^0.15.1",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.3.0",
-    "vite-plugin-pages": "^0.29.0",
-    "vite-plugin-vue-devtools": "1.0.0-beta.5",
-    "vite-plugin-vuetify": "^1.0.2",
+    "vite": "^5.0.0",
+    "vite-plugin-pages": "^0.32.3",
+    "vite-plugin-vue-devtools": "7.3.6",
+    "vite-plugin-vuetify": "^2.0.3",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^1.5.0",
-    "vue-tsc": "^1.8.24"
+    "vue-tsc": "^2.0.26"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
