--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "svg.js": "^2.7.1",
     "tauri-plugin-shion-history-api": "github:shion-app/history",
     "tauri-plugin-shion-watcher-api": "github:shion-app/watcher",
+    "turndown": "^7.2.0",
     "vee-validate": "^4.11.8",
     "vue": "^3.4.33",
     "vue-component-type-helpers": "^1.8.24",
