--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -52,6 +52,7 @@ futures-util = "0.3"
 path-slash = "0.2.1"
 derive_more = { version = "1", features = ["full"] }
 reqwest = "0.12.4"
+open = "5.3.0"
 
 [package.metadata.bin]
 # cargo-run-bin
