--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "camel-case": "^4.1.2",
     "camelcase-keys": "^9.0.0",
     "classnames": "^2.3.2",
+    "color": "^4.2.3",
     "compare-versions": "^6.1.0",
     "date-fns": "^2.29.3",
     "driver.js": "^1.3.1",
@@ -87,6 +88,7 @@
     "@rollup/pluginutils": "^5.0.2",
     "@tauri-apps/cli": "^2.0.0-rc.0",
     "@types/better-sqlite3": "^7.6.5",
+    "@types/color": "^3.0.6",
     "@types/node": "^18.7.10",
     "@types/postcss-pxtorem": "^6.0.3",
     "@types/psl": "^1.1.3",
