--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "hotkeys-js": "^3.13.7",
     "i18next": "^23.6.0",
     "kysely": "^0.27.2",
+    "lodash-es": "^4.17.21",
     "markdown-it-link-attributes": "^4.0.1",
     "md-editor-v3": "^4.15.0",
     "merge-options": "^3.0.4",
@@ -90,6 +91,7 @@
     "@tauri-apps/cli": "^2.0.0-rc.0",
     "@types/better-sqlite3": "^7.6.5",
     "@types/color": "^3.0.6",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.7.10",
     "@types/postcss-pxtorem": "^6.0.3",
     "@types/psl": "^1.1.3",
