--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "fast-deep-equal": "^3.1.3",
     "grid-layout-plus": "github:hanaTsuk1/grid-layout-plus#build",
     "hotkeys-js": "^3.13.7",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.6.0",
     "kysely": "^0.27.2",
     "lodash-es": "^4.17.21",
